--- a/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5/assets/scss/custom.scss
+++ b/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5/assets/scss/custom.scss
@@ -1,1 +1,3 @@
 // Override this file to add your own SCSS styling.
+
+// by inspecting each element in the webpage and copy + paste the style here to modify.
